dhall/tests/type-errors/unit/VariableFree.txt
Type error:  --> 1:1
  |
1 | xâŠ
  | ^
  |
  = Unbound variable
